# bounds

./: CHANGELOG.md  Makefile  README.md  bounds.cabal  cabal.project  flake.nix  hie.yaml  stack.yaml
.github/workflows/: cabal.yaml  ci.yaml  stack.yaml
docs/: Data-Bounds.html  bounds.haddock  doc-index.html  doc-index.json  index.html
docs/src/: Data.Bounds.html
nix/: stack.nix
src/Data/: Bounds.hs
test/unit/: Main.hs
test/unit/Props/: Generators.hs
test/unit/Props/Data/: Bounds.hs
tools/: format.sh  haddock.sh
