cabal-version:      2.4
name:               bounds
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.6 || ==9.6.2

copyright:          2022-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/bounds/
bug-reports:        https://github.com/tbidne/bounds/issues
synopsis:           Typeclasses for bounded types
description:        Typeclasses for bounded types
category:           Numeric
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/bounds

common common-lang
  default-extensions:
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    GADTs
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeOperators

  if os(windows)
    cpp-options: -DWINDOWS

library
  import:           common-lang
  exposed-modules:  Data.Bounds
  build-depends:    base >=4.14.0.0 && <4.19
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Props.Data.Bounds
    Props.Generators

  build-depends:
    , base
    , bounds
    , hedgehog        >=1.0.2   && <1.5
    , tasty           >=1.1.0.3 && <1.5
    , tasty-hedgehog  >=1.0.1.0 && <1.5

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010
